fixed(main) resolved the issue where data can't be insert to redis, downtime of the redis-master service.